<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/qnsans_bg" >

    <TextView
        android:id="@+id/qnLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/qnLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/qnNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/qnNumber"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/qnLabel"
        app:layout_constraintStart_toEndOf="@+id/qnLabel"
        app:layout_constraintTop_toTopOf="@+id/qnLabel" />

    <TextView
        android:id="@+id/qnDescription"
        android:layout_width="299dp"
        android:layout_height="162dp"
        android:layout_marginTop="28dp"
        android:text="@string/qnDescription"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/qnLabel"
        app:layout_constraintTop_toBottomOf="@+id/qnLabel" />

    <Button
        android:id="@+id/btnA"
        android:layout_width="60pt"
        android:layout_height="30pt"
        android:layout_marginStart="60dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_a_design"
        android:checkable="false"
        android:text="@string/option_A"
        android:textColor="#000000"
        android:textSize="34sp"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qnDescription" />

    <Button
        android:id="@+id/btnB"
        android:layout_width="60pt"
        android:layout_height="30pt"
        android:layout_marginStart="20dp"
        android:background="@drawable/button_b_design"
        android:text="@string/option_B"
        android:textColor="#000000"
        android:textSize="34sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/btnA"
        app:layout_constraintStart_toEndOf="@+id/btnA"
        app:layout_constraintTop_toTopOf="@+id/btnA"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnC"
        android:layout_width="60pt"
        android:layout_height="30pt"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_c_design"
        android:text="@string/option_C"
        android:textColor="#000000"
        android:textSize="34sp"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="@+id/btnA"
        app:layout_constraintTop_toBottomOf="@+id/btnA" />

    <Button
        android:id="@+id/btnD"
        android:layout_width="60pt"
        android:layout_height="30pt"
        android:background="@drawable/button_d_design"
        android:text="@string/option_D"
        android:textColor="#000000"
        android:textSize="34sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/btnC"
        app:layout_constraintEnd_toEndOf="@+id/btnB" />

    <TextView
        android:id="@+id/countdownTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countdownTimer"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnD"
        app:layout_constraintVertical_bias="0.512" />


</androidx.constraintlayout.widget.ConstraintLayout>