<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sessionIDPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/qnsans_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/labelWelcome"
            android:textAlignment="center"
            android:textColor="@color/navy"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/labelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/labelName"
            android:textColor="@color/navy"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelEnterSessionID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:text="@string/labelEnterSessionId"
                android:textColor="@color/navy"
                android:textSize="34sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtEnterSessionIDlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEnterSessionID"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="#1A000000"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="4"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="48sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>